Tue Oct 28 14:44:41 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/subscriber.cpp:

          Removed some checking when an unreliable transport is used.

Mon Oct 27 22:02:48 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/multicast.ini:
        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/subscriber.cpp:

          Test requires durability QoS to ensure delivery of all samples
          with rtps_udp transport.  Can't just depend on association_complete
          because the transport will not request resends for lost data with
          sequence numbers less than the first received without durability.

Mon Oct 20 21:58:03 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:

          Restored a #include that was removed in r6563.

Mon Oct 20 19:02:17 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:

          Sleep before exiting to allow naks to be received.

Mon Oct 20 18:05:18 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManualAssertLiveliness/publisher.cpp:

          Sleep one second before deleting entities.

Fri Oct 17 21:22:55 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Fix some bugs with IPv6 addresses.

        * tests/DCPS/BidirMessenger/pubsub_ipv6.ini:
        * tests/DCPS/Messenger/pub_ipv6.ini:
        * tests/DCPS/Messenger/sub_ipv6.ini:
        * tests/DCPS/RecorderReplayer/pub_ipv6.ini:
        * tests/DCPS/RecorderReplayer/relay_ipv6.ini:
        * tests/DCPS/ZeroCopyDataReaderListener/pub_ipv6.ini:

          Fix some problems with IPv6 addresses used in these tests.


Thu Oct 16 21:19:37 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/run_test.pl:
        * tests/DCPS/ManualAssertLiveliness/run_test.pl:

          Log level changes
