@@ -1,3 +1,9 @@
+Tue Oct 28 21:56:09 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.cpp:
+
+          Added a log message to diagnose liveliness lost
+
 Tue Oct 28 14:44:41 UTC 2014  Adam Mitz  <mitza@ociweb.com>
 
         * tests/DCPS/LargeSample/subscriber.cpp:
